objects/Parent_Object__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Object</label>
        <referenceTo>Parent_Object__c</referenceTo>
        <relationshipLabel>Parent Objects</relationshipLabel>
        <relationshipName>Parent_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Parent Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>External_Id__c</columns>
        <columns>Phone__c</columns>
        <columns>Status__c</columns>
        <columns>Parent_Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Parent Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>